full draft of all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,7 @@
           <a href="{{ "/" | absolute_url }}">Getting Started</a> |
           <a href="sql">SQL</a> |
           <a href="db-management">Database Management</a> |
-          <a href="R-and-Python">Large Data in R and Python</a> |
-          <a href="appendices">Appendices</a>
+          <a href="R-and-Python">Large Data in R and Python</a> 
         </nav>
         <p></p>
 
