test fixed position menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         
       </header>
       <section>
-        <nav>
+        <nav class="menu">
           <a href="{{ "/" | absolute_url }}">Getting Started</a> |
           <a href="sql">SQL</a> |
           <a href="db-management">Database Management</a> |
