test fixed position menu, try 2

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -222,6 +222,10 @@ footer {
     position:fixed
 }
 
+.material{
+      top: 50px;
+}
+
 // This causes weird behavior of toc within header appearing at top of page
 // if we have 960, 720 for the two separate @media blocs;
 // Instead have both come into effect at same width.
