--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,8 +60,10 @@
         </nav>
         <p></p>
 
-      {{ content }}
-
+        <div class="material">
+          {{ content }}
+        </div>
+        
       </section>
       <footer>
       </footer>
