test fixed position menu, try 4

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -220,12 +220,11 @@ footer {
 
 nav.menu {
   position:fixed;
-  font-size:15px;
+  font-size:30px;
 }
 
 div.material{
-  top:50px;
-  border-top:50px;
+  margin-top:200px;
 }
 
 // This causes weird behavior of toc within header appearing at top of page
