test fixed position menu, try 5

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -220,11 +220,11 @@ footer {
 
 nav.menu {
   position:fixed;
-  font-size:30px;
+  font-size:20px;
 }
 
 div.material{
-  margin-top:200px;
+  top:200px;
 }
 
 // This causes weird behavior of toc within header appearing at top of page
