--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,15 +52,17 @@
         
       </header>
       <section>
+        <div>
         <nav class="menu">
           <a href="{{ "/" | absolute_url }}">Getting Started</a> |
           <a href="sql">SQL</a> |
           <a href="db-management">Database Management</a> |
           <a href="R-and-Python">Big Data in R and Python</a> 
         </nav>
-        <p></p>
-
+        </div>
+        <p>test</p>
         <div class="material">
+          <p>test2</p>
           {{ content }}
         </div>
         
