test fixed position menu, try 7

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -224,7 +224,7 @@ nav.menu {
 }
 
 div.material{
-  top:200px;
+    font-size:20px;
 }
 
 // This causes weird behavior of toc within header appearing at top of page
