test fixed position menu, try 8

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,17 +52,15 @@
         
       </header>
       <section>
-        <div>
-        <nav class="menu">
+        <div class="menu">
+        <nav>
           <a href="{{ "/" | absolute_url }}">Getting Started</a> |
           <a href="sql">SQL</a> |
           <a href="db-management">Database Management</a> |
           <a href="R-and-Python">Big Data in R and Python</a> 
         </nav>
         </div>
-        <p>test</p>
-        <div class="material">
-          <p>test2</p>
+        <div class="main">
           {{ content }}
         </div>
         
