test fixed position menu, try 9

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -218,7 +218,7 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-nav.menu {
+.menu {
     position:fixed;
     top:0;
     font-size:20px;
