test fixed position menu, try 10

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -223,12 +223,11 @@ footer {
     top:0;
     font-size:20px;
     background-color:white;
+    width:100%;
 }
 
 .main {
-   // top:100px;
     margin-top:200px;
-   // border-top:300px;
 }
 
 // This causes weird behavior of toc within header appearing at top of page
