--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -220,14 +220,14 @@ footer {
 
 .menu {
     position:fixed;
-    top:0;
+    top:20px;
     font-size:20px;
     background-color:white;
     width:100%;
 }
 
 .main {
-    margin-top:200px;
+    margin-top: 100px;
 }
 
 // This causes weird behavior of toc within header appearing at top of page
