--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
           <a href="{{ "/" | absolute_url }}">Getting Started</a> |
           <a href="sql">SQL</a> |
           <a href="db-management">Database Management</a> |
+          <a href="bigquery">Databases in the Cloud</a> |
           <a href="R-and-Python">Big Data in R and Python</a> 
         </nav>
         </div>
